<resources>
    <string name="app_name">MakeACocktail</string>
    <string name="text_view_title">Text View</string>

    <!--    cocktail detail fragment-->
    <string name="cocktail_detail_fragment">Cocktail details</string>
    <string name="name_title">Name:</string>
    <string name="type_title">Type:</string>
    <string name="glass_title">Glass:</string>
    <string name="ingredients_title">Ingredients:</string>
    <string name="instructions_title">Instructions:</string>
    <string name="add_to_favorites_title">Add to favorites</string>
    <string name="remove_from_favorites_title">Remove from favorites</string>

<!--    cocktail by name fragment-->
    <string name="cocktail_by_name_fragment">Search by name</string>

<!--    cocktail by ingredient fragment-->
    <string name="cocktail_by_ingredient_fragment">Search by ingredient</string>
    <string name="search_ingredient_hint">Search ingredient</string>


    <!--    get random cocktail-->
    <string name="get_random_cocktail">Get a random cocktail</string>
    <string name="random_cocktail_title">Click to get a random cocktail</string>
    <string name="random_cocktail_button">Randomize</string>

<!--    favorite cocktails fragment-->
    <string name="favorite_cocktails_fragment">Favorite cocktails</string>
    <string name="no_favorites_title">No favorites yet</string>

    <!-- Dialog strings-->
    <string name="chore_title">name</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete?</string>
    <string name="delete_dialog_pos">Yes</string>
    <string name="delete_dialog_neg">No</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>

<!--    connection error-->
    <string name="no_result_title">No Results</string>
    <string name="connection_error_message">Oops. something wen\'t wrong, please check your network</string>
    <string name="connection_error_button">Try again</string>
    <string name="no_internet_connection_message_from_api">"Network call has failed for the following reason: Unable to resolve host \"www.thecocktaildb.com\": No address associated with hostname"</string>

</resources>