<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav.xml"
    app:startDestination="@id/favoriteCocktailsFragment">

    <fragment
        android:id="@+id/detailedCocktailFragment"
        android:name="il.co.syntax.finalkotlinproject.ui.detailed_cocktail.DetailedCocktailFragment"
        android:label="@string/cocktail_detail_fragment"
        tools:layout="@layout/cocktail_detail_fragment" />

    <fragment
        android:id="@+id/allCocktailsByNameFragment"
        android:name="il.co.syntax.finalkotlinproject.ui.search_by_name.AllCocktailsByNameFragment"
        android:label="@string/cocktail_by_name_fragment"
        tools:layout="@layout/cocktails_by_name_fragment" >
        <action
            android:id="@+id/action_allCocktailsByNameFragment_to_detailedCocktailFragment"
            app:destination="@id/detailedCocktailFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"/>

    </fragment>

    <fragment
        android:id="@+id/allCocktailsByIngredientFragment"
        android:name="il.co.syntax.finalkotlinproject.ui.search_by_ingredient.AllCocktailsByIngredientFragment"
        android:label="@string/cocktail_by_ingredient_fragment"
        tools:layout="@layout/cocktails_by_ingredient_fragment" >
        <action
            android:id="@+id/action_allCocktailsByIngredientFragment_to_detailedCocktailFragment"
            app:destination="@id/detailedCocktailFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"/>

    </fragment>

    <fragment
        android:id="@+id/getRandomCocktailFragment"
        android:name="il.co.syntax.finalkotlinproject.ui.random_cocktail.GetRandomCocktailFragment"
        android:label="@string/get_random_cocktail"
        tools:layout="@layout/get_random_cocktail_fragment" >
        <action
            android:id="@+id/action_getRandomCocktailFragment_to_detailedCocktailFragment"
            app:destination="@id/detailedCocktailFragment"
            app:enterAnim="@anim/from_zoom_in_to_zoom_out"
            app:exitAnim="@anim/from_zoom_in_to_zoom_out"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"/>
    </fragment>

    <fragment
        android:id="@+id/favoriteCocktailsFragment"
        android:name="il.co.syntax.finalkotlinproject.ui.favorites.FavoriteCocktailsFragment"
        android:label="@string/favorite_cocktails_fragment"
        tools:layout="@layout/favorite_cocktails_fragment" >
        <action
            android:id="@+id/action_favoriteCocktailsFragment_to_detailedFavoriteCocktailFragment"
            app:destination="@id/detailedFavoriteCocktailFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"/>
    </fragment>
    <fragment
        android:id="@+id/detailedFavoriteCocktailFragment"
        android:name="il.co.syntax.finalkotlinproject.ui.detailed_favorite_cocktail.DetailedFavoriteCocktailFragment"
        android:label="@string/cocktail_detail_fragment"
        tools:layout="@layout/cocktail_favorite_detail_fragment"/>

</navigation>